samples/_failures_safe/1761190306_658d38_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_62f324b0.c: In function ‘main’:
./samples/SAFE/__tmp_62f324b0.c:176:5: error: expected declaration or statement at end of input
  176 |     if (tokenizer.error_count > 0) {
      |     ^~
./samples/SAFE/__tmp_62f324b0.c:176:5: error: expected declaration or statement at end of input
